--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
     <header class="showcase">
         <div class="content">
             <img src="mainLogo.png" class="logo" alt="logo">
-            <div class="title">Welcome To Belovedth's Page</div>
+            <div class="title">Welcome</div>
             <div class="text">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, officia.
             </div>
+            <button class="btn">Get Started</button>
         </div>
     </header>
 
@@ -42,7 +43,7 @@
     <div class="container">
         <div class="grid-2">
             <div class="center">
-                <i><img src="logo4.png" class="node" alt="about" srcset=""></i>
+                <i><img src="logo1.png" class="node" alt="about" srcset=""></i>
             </div>
             <div>
                 <h3>About Me</h3>
@@ -54,6 +55,7 @@
 
     <footer class="center bg-dark">
         <p>SOMA &copy; 2022</p>
+        <small style="color:#b3b3b3">some other information with purpose </small>
     </footer>
 </body>
 
