--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <section class="services">
         <div class="container grid-3 center bg-dark">
             <div>
-                <i class="icons"><img src="youtube.png" alt="" srcset=""></i>
+                <i class="icons"><img src="youtube.png" style="filter: invert(1);" alt="" srcset=""></i>
                 <h3>Youtube</h3>
                 <p>Lorem ipsum dolor sit.</p>
             </div>
